// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> (v2) CriticalRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-critical"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-critical"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-critical"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) Default story renders snapshot 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default"
  type="button"
>
  <span
    class="button__text"
  >
    Default
  </span>
</button>
`;

exports[`<Button /> (v2) DefaultRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) Disabled story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--disabled button--primary button--lg button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--secondary button--lg button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--disabled button--tertiary button--lg button--variant-default"
    disabled=""
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) FullWidths story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--full-width button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--full-width button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) IconLayouts story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-left button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1rem"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22C10.6167 22 9.31667 21.7375 8.1 21.2125C6.88333 20.6875 5.825 19.975 4.925 19.075C4.025 18.175 3.3125 17.1167 2.7875 15.9C2.2625 14.6833 2 13.3833 2 12C2 10.6167 2.2625 9.31667 2.7875 8.1C3.3125 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.3125 8.1 2.7875C9.31667 2.2625 10.6167 2 12 2C13.3833 2 14.6833 2.2625 15.9 2.7875C17.1167 3.3125 18.175 4.025 19.075 4.925C19.975 5.825 20.6875 6.88333 21.2125 8.1C21.7375 9.31667 22 10.6167 22 12C22 13.3833 21.7375 14.6833 21.2125 15.9C20.6875 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6875 15.9 21.2125C14.6833 21.7375 13.3833 22 12 22ZM12 20C14.2333 20 16.125 19.225 17.675 17.675C19.225 16.125 20 14.2333 20 12C20 9.76667 19.225 7.875 17.675 6.325C16.125 4.775 14.2333 4 12 4C9.76667 4 7.875 4.775 6.325 6.325C4.775 7.875 4 9.76667 4 12C4 14.2333 4.775 16.125 6.325 17.675C7.875 19.225 9.76667 20 12 20Z"
        />
      </svg>
      Left
    </span>
  </button>
  <button
    class="button button--layout-right button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Right
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1rem"
        style="--icon-size: 1rem;"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22C10.6167 22 9.31667 21.7375 8.1 21.2125C6.88333 20.6875 5.825 19.975 4.925 19.075C4.025 18.175 3.3125 17.1167 2.7875 15.9C2.2625 14.6833 2 13.3833 2 12C2 10.6167 2.2625 9.31667 2.7875 8.1C3.3125 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.3125 8.1 2.7875C9.31667 2.2625 10.6167 2 12 2C13.3833 2 14.6833 2.2625 15.9 2.7875C17.1167 3.3125 18.175 4.025 19.075 4.925C19.975 5.825 20.6875 6.88333 21.2125 8.1C21.7375 9.31667 22 10.6167 22 12C22 13.3833 21.7375 14.6833 21.2125 15.9C20.6875 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6875 15.9 21.2125C14.6833 21.7375 13.3833 22 12 22ZM12 20C14.2333 20 16.125 19.225 17.675 17.675C19.225 16.125 20 14.2333 20 12C20 9.76667 19.225 7.875 17.675 6.325C16.125 4.775 14.2333 4 12 4C9.76667 4 7.875 4.775 6.325 6.325C4.775 7.875 4 9.76667 4 12C4 14.2333 4.775 16.125 6.325 17.675C7.875 19.225 9.76667 20 12 20Z"
        />
      </svg>
    </span>
  </button>
  <button
    aria-label="Label must be applied with icon-only layout"
    class="button button--layout-icon-only button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22C10.6167 22 9.31667 21.7375 8.1 21.2125C6.88333 20.6875 5.825 19.975 4.925 19.075C4.025 18.175 3.3125 17.1167 2.7875 15.9C2.2625 14.6833 2 13.3833 2 12C2 10.6167 2.2625 9.31667 2.7875 8.1C3.3125 6.88333 4.025 5.825 4.925 4.925C5.825 4.025 6.88333 3.3125 8.1 2.7875C9.31667 2.2625 10.6167 2 12 2C13.3833 2 14.6833 2.2625 15.9 2.7875C17.1167 3.3125 18.175 4.025 19.075 4.925C19.975 5.825 20.6875 6.88333 21.2125 8.1C21.7375 9.31667 22 10.6167 22 12C22 13.3833 21.7375 14.6833 21.2125 15.9C20.6875 17.1167 19.975 18.175 19.075 19.075C18.175 19.975 17.1167 20.6875 15.9 21.2125C14.6833 21.7375 13.3833 22 12 22ZM12 20C14.2333 20 16.125 19.225 17.675 17.675C19.225 16.125 20 14.2333 20 12C20 9.76667 19.225 7.875 17.675 6.325C16.125 4.775 14.2333 4 12 4C9.76667 4 7.875 4.775 6.325 6.325C4.775 7.875 4 9.76667 4 12C4 14.2333 4.775 16.125 6.325 17.675C7.875 19.225 9.76667 20 12 20Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) InverseRanks story renders snapshot 1`] = `
<div
  class="bg-[var(--eds-color-blue-850)] p-1"
>
  <div
    class="flex gap-1"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-inverse"
      type="button"
    >
      <span
        class="button__text"
      >
        Primary
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-inverse"
      type="button"
    >
      <span
        class="button__text"
      >
        Secondary
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--variant-inverse"
      type="button"
    >
      <span
        class="button__text"
      >
        Tertiary
      </span>
    </button>
  </div>
</div>
`;

exports[`<Button /> (v2) LoadingStates story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--loading button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Large
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="24"
        stroke="transparent"
        viewBox="-20 -20 42 42"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="2"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Medium
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="24"
        stroke="transparent"
        viewBox="-20 -20 42 42"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="2"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
  <button
    class="button button--layout-none button--loading button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text button--is-loading"
    >
      Small
    </span>
    <div
      aria-busy="true"
      aria-label="loading"
      class="loading-indicator button__loader"
      data-testid="oval-loading"
      role="status"
    >
      <svg
        data-testid="oval-svg"
        height="24"
        stroke="transparent"
        viewBox="-20 -20 42 42"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            data-testid="oval-secondary-group"
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="0"
              cy="0"
              r="20"
              stroke="transparent"
              stroke-opacity=".5"
              stroke-width="2"
            />
            <path
              d="M20 0c0-9.94-8.06-20-20-20"
            >
              <animatetransform
                attributeName="transform"
                dur="1s"
                from="0 0 0"
                repeatCount="indefinite"
                to="360 0 0"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`<Button /> (v2) NeutralRanks story renders snapshot 1`] = `
<div
  class="flex gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-neutral"
    type="button"
  >
    <span
      class="button__text"
    >
      Primary
    </span>
  </button>
  <button
    class="button button--layout-none button--secondary button--lg button--variant-neutral"
    type="button"
  >
    <span
      class="button__text"
    >
      Secondary
    </span>
  </button>
  <button
    class="button button--layout-none button--tertiary button--lg button--variant-neutral"
    type="button"
  >
    <span
      class="button__text"
    >
      Tertiary
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) Sizes story renders snapshot 1`] = `
<div
  class="flex items-center gap-1"
>
  <button
    class="button button--layout-none button--primary button--lg button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Large
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--md button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Medium
    </span>
  </button>
  <button
    class="button button--layout-none button--primary button--sm button--variant-default"
    type="button"
  >
    <span
      class="button__text"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`<Button /> (v2) TertiaryStandalone story renders snapshot 1`] = `
<button
  class="button button--context-standalone button--layout-none button--tertiary button--lg button--variant-default"
  type="button"
>
  <span
    class="button__text"
  >
    Button
  </span>
</button>
`;

exports[`<Button /> (v2) UsingExtendedLink story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet,
   
  <button
    class="button button--layout-none button--primary button--lg button--variant-default"
    to="test"
    type="button"
  >
    <span
      class="button__text"
    >
      consectetur adipiscing elit
    </span>
  </button>
  . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
</div>
`;

exports[`<Button /> (v2) passes class names down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default exampleClassName"
  data-testid="example-class-name"
  type="button"
>
  <span
    class="button__text"
  >
    Click
  </span>
</button>
`;

exports[`<Button /> (v2) passes test ids down properly 1`] = `
<button
  class="button button--layout-none button--primary button--lg button--variant-default"
  data-testid="example-test-id"
  type="button"
>
  <span
    class="button__text"
  >
    Click
  </span>
</button>
`;
